dispatcher/ingress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dispatcher-app-deployment
  namespace: dispatch
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: dispatcher-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  template:
    metadata:
      labels:
        app: dispatcher-app
    spec:
      terminationGracePeriodSeconds: 400
      containers:
        - name: dispatcher-app
          imagePullPolicy: Always
          image: gcr.io/peerless-trees-333620/dispatcher:3.2.239148-dev
          ports:
            - containerPort: 3000
          livenessProbe: # Used by deployment controller
            httpGet:
              path: /ping
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /ping
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            limits:
              memory: 1024Mi
            requests:
              memory: 256Mi  
---
apiVersion: v1
kind: Service
metadata:
  name: dispatcher-app
  namespace: dispatch
  labels:
    run: api
    type: iap-srv
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: dispatcher-app
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dispatcher-app-ingress
  namespace: dispatch
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: dispatcher-app
            port:
              number: 80
